--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 
     .overlay-card {
       position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90vw;
+      max-width: 600px;
       background: rgba(0,0,0,0.2);
       backdrop-filter: blur(5px);
-      display: flex; flex-direction: column;
-      justify-content: center; align-items: center;
-      text-align: center; padding: 5vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 5vw;
       z-index: 100;
-    }
+   }
 
     .overlay-card h2 {
       margin-top: 0;
