--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <style>
-    html,body { height:100%; margin:0; padding:0; }
+     * {
+  -webkit-tap-highlight-color: transparent;
+     }
+
+    html,body { 
+      height: 100%; 
+      margin: 0; 
+      padding: 0; 
+    }
+
     body {
       font-family: "Press Start 2P", cursive;
       background: url("patintero-bg.png") no-repeat center center fixed;
       background-size: cover;
       overflow: hidden;
+      touch-action: manipulation;
     }
 
     .overlay-card {
