--- a/index.html
+++ b/index.html
@@ -6,6 +6,246 @@
 <title>Patintero Game</title>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
+  <style>
+html,body { 
+height: 100%; 
+margin:0; 
+padding:0; 
+}
+
+body {
+  font-family: "Press Start 2P", cursive;
+  background: url("patintero-bg.png") no-repeat center center fixed;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.overlay-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90vw;
+  max-width: 600px;
+  background: rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 5vw;
+  z-index: 100;
+}
+
+.overlay-card h2 {
+  margin-top: 0;
+  color: yellow;
+  font-size: 5vw;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 0 #000;
+}
+
+.overlay-card p {
+  font-size: 3vw;
+  margin: 5vw 0;
+  line-height: 1.6em;
+  color: #fff;
+  text-shadow: 1px 1px 0 #000;
+  max-width: 90vw;
+}
+
+.overlay-card ul {
+  text-align: left;
+  color: #fff;
+  font-size: 2.5vw;
+  max-width: 80%;
+  margin: 2vw 0;
+  list-style: none;
+  padding: 0;
+}
+
+.overlay-card li {
+  margin: 1vw 0;
+  text-shadow: 1px 1px 0 #000;
+}
+
+.overlay-card input {
+  padding: 3vw;
+  font-size: 3vw;
+  width: 70%;
+  margin: 2vw 0;
+  border: 2px solid #fff;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.9);
+  font-family: inherit;
+  text-align: center;
+}
+
+#startBtn, .submit-btn, #leaderboardBtn {
+  padding: 3vw 6vw;
+  font-size: 3vw;
+  background: #2196f3;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.18s ease;
+  box-shadow: 0 4px 0 #0d47a1;
+  z-index: 101;
+  pointer-events: auto;
+  margin: 2vw 0;
+}
+
+#leaderboardBtn {
+  background: #4caf50;
+  box-shadow: 0 4px 0 #388e3c;
+}
+
+#startBtn:hover, .submit-btn:hover, #leaderboardBtn:hover {
+  transform: scale(1.06);
+}
+
+#leaderboardBtn:hover {
+  background: #45a049;
+}
+
+/* UI Elements */
+.top-ui {
+  position: fixed;
+  top: 10px;
+  z-index: 1000;
+  color: white;
+  text-shadow: 1px 1px 0 black;
+  font-size: clamp(8px, 2vw, 16px);
+  line-height: 1.2;
+}
+
+#ui-left {
+  left: 10px;
+}
+
+#ui-right {
+  right: 10px;
+  text-align: right;
+}
+
+#ui-right h3 {
+  color: yellow;
+  font-size: clamp(12px, 4vw, 24px);
+  margin: 0;
+  letter-spacing: 2px;
+}
+
+/* Joystick Styles */
+#joystick {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 100px;
+  height: 100px;
+  background: rgba(255, 255, 255, 0.3);
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  z-index: 999;
+  pointer-events: auto;
+  display: none;
+  transition: opacity 0.3s ease;
+}
+
+#knob {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.7);
+  border: 2px solid rgba(255, 255, 255, 0.9);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.1s ease;
+}
+
+/* Level Complete Announcement */
+#levelCompleteOverlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80vw;
+  max-width: 400px;
+  background: rgba(0, 255, 0, 0.8);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  z-index: 1001;
+  display: none;
+  font-size: 4vw;
+  font-family: "Press Start 2P", cursive;
+  text-shadow: 1px 1px 0 black;
+}
+
+/* CHARACTER SPRITE SYSTEM */
+:root {
+  --pixel-size: 2;
+}
+
+.Character {
+  width: calc(32px * var(--pixel-size));
+  height: calc(32px * var(--pixel-size));
+  overflow: hidden;
+  position: absolute;
+}
+
+.Character_spritesheet {
+  animation: moveSpritesheet 1s steps(4) infinite;
+  width: calc(128px * var(--pixel-size));
+  position: absolute;
+}
+.Character_shadow {
+  position: absolute;
+  width: calc(32px * var(--pixel-size));
+  height: calc(32px * var(--pixel-size));
+}
+
+.pixelart {
+  image-rendering: pixelated;
+}
+
+.face-down { top: 0; }
+.face-right { top: calc(-32px * var(--pixel-size)); }
+.face-up { top: calc(-64px * var(--pixel-size)); }
+.face-left { top: calc(-96px * var(--pixel-size)); }
+
+@keyframes moveSpritesheet {
+  from { transform: translate3d(0px,0,0) }
+  to { transform: translate3d(-100%,0,0) }
+}
+
+/* FINISH LINE STYLE */
+.finish-line {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  background: linear-gradient(to right, #ff0000, #ffff00, #00ff00);
+  animation: pulseGlow 1.5s infinite alternate;
+  box-shadow: 0 0 15px rgba(255,255,0,0.8);
+  z-index: 900;
+}
+
+@keyframes pulseGlow {
+  from {
+    opacity: 0.5;
+    box-shadow: 0 0 5px rgba(255,255,0,0.5);
+  }
+  to {
+    opacity: 1;
+    box-shadow: 0 0 20px rgba(255,255,0,1);
+  }
+}
+</style>
   
 </head>
 <body>
