--- a/index.html
+++ b/index.html
@@ -6,4 +6,47 @@
 <title>Patintero Game</title>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
+ <style>
+html,body { 
+height: 100%; 
+margin:0; 
+padding:0; 
+}
+
+body {
+  font-family: "Press Start 2P", cursive;
+  background: url("patintero-bg.png") no-repeat center center fixed;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.overlay-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90vw;
+  max-width: 600px;
+  background: rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 5vw;
+  z-index: 100;
+}
+
+.overlay-card h2 {
+  margin-top: 0;
+  color: yellow;
+  font-size: 5vw;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 0 #000;
+}
+
+
+  </html>
+
  
