--- a/index.html
+++ b/index.html
@@ -45,6 +45,58 @@ body {
   letter-spacing: 2px;
   text-shadow: 2px 2px 0 #000;
 }
+  .overlay-card p {
+  font-size: 3vw;
+  margin: 5vw 0;
+  line-height: 1.6em;
+  color: #fff;
+  text-shadow: 1px 1px 0 #000;
+  max-width: 90vw;
+}
+  .overlay-card ul {
+  text-align: left;
+  color: #fff;
+  font-size: 2.5vw;
+  max-width: 80%;
+  margin: 2vw 0;
+  list-style: none;
+  padding: 0;
+}
+
+.overlay-card li {
+  margin: 1vw 0;
+  text-shadow: 1px 1px 0 #000;
+}
+
+.overlay-card input {
+  padding: 3vw;
+  font-size: 3vw;
+  width: 70%;
+  margin: 2vw 0;
+  border: 2px solid #fff;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.9);
+  font-family: inherit;
+  text-align: center;
+}
+
+#startBtn, .submit-btn, #leaderboardBtn {
+  padding: 3vw 6vw;
+  font-size: 3vw;
+  background: #2196f3;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.18s ease;
+  box-shadow: 0 4px 0 #0d47a1;
+  z-index: 101;
+  pointer-events: auto;
+  margin: 2vw 0;
+}
+
+
+
 
 
   </html>
