--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@ body {
   margin: 2vw 0;
 }
 
+  #leaderboardBtn {
+  background: #4caf50;
+  box-shadow: 0 4px 0 #388e3c;
+}
+
+#startBtn:hover, .submit-btn:hover, #leaderboardBtn:hover {
+  transform: scale(1.06);
+}
+
+#leaderboardBtn:hover {
+  background: #45a049;
+}
+
 
 
 
