--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@ body {
   background: #45a049;
 }
 
+  /* UI Elements */
+.top-ui {
+  position: fixed;
+  top: 10px;
+  z-index: 1000;
+  color: white;
+  text-shadow: 1px 1px 0 black;
+  font-size: clamp(8px, 2vw, 16px);
+  line-height: 1.2;
+}
+
+#ui-left {
+  left: 10px;
+}
+
+#ui-right {
+  right: 10px;
+  text-align: right;
+}
+
 
 
 
