--- a/index.html
+++ b/index.html
@@ -127,6 +127,62 @@ body {
   right: 10px;
   text-align: right;
 }
+  #ui-right h3 {
+  color: yellow;
+  font-size: clamp(12px, 4vw, 24px);
+  margin: 0;
+  letter-spacing: 2px;
+}
+
+/* Joystick Styles */
+#joystick {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 100px;
+  height: 100px;
+  background: rgba(255, 255, 255, 0.3);
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  z-index: 999;
+  pointer-events: auto;
+  display: none;
+  transition: opacity 0.3s ease;
+}
+
+#knob {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.7);
+  border: 2px solid rgba(255, 255, 255, 0.9);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.1s ease;
+}
+
+/* Level Complete Announcement */
+#levelCompleteOverlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80vw;
+  max-width: 400px;
+  background: rgba(0, 255, 0, 0.8);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  z-index: 1001;
+  display: none;
+  font-size: 4vw;
+  font-family: "Press Start 2P", cursive;
+  text-shadow: 1px 1px 0 black;
+}
+
 
 
 
