--- a/index.html
+++ b/index.html
@@ -183,6 +183,45 @@ body {
   text-shadow: 1px 1px 0 black;
 }
 
+  /* CHARACTER SPRITE SYSTEM */
+:root {
+  --pixel-size: 2;
+}
+
+.Character {
+  width: calc(32px * var(--pixel-size));
+  height: calc(32px * var(--pixel-size));
+  overflow: hidden;
+  position: absolute;
+}
+
+.Character_spritesheet {
+  animation: moveSpritesheet 1s steps(4) infinite;
+  width: calc(128px * var(--pixel-size));
+  position: absolute;
+}
+.Character_shadow {
+  position: absolute;
+  width: calc(32px * var(--pixel-size));
+  height: calc(32px * var(--pixel-size));
+}
+
+.pixelart {
+  image-rendering: pixelated;
+}
+
+.face-down { top: 0; }
+.face-right { top: calc(-32px * var(--pixel-size)); }
+.face-up { top: calc(-64px * var(--pixel-size)); }
+.face-left { top: calc(-96px * var(--pixel-size)); }
+
+@keyframes moveSpritesheet {
+  from { transform: translate3d(0px,0,0) }
+  to { transform: translate3d(-100%,0,0) }
+}
+
+
+
 
 
 
